changes on editor toolbatr

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         .table-bordered th, .table-bordered tr, .table-bordered td, .table-bordered thead tr th {
             border: 1px solid #acacac ;
         }
+        .table-bordered thead tr th,.table-bordered thead tr th input{
+            background-color: rgb(224, 222, 222) !important;
+        }
         .table-bordered .r-border{
             border-bottom-color: #ffffff !important;
             border-left-color: #ffffff !important;
@@ -189,18 +192,18 @@
                         </div>
                         <div class="col-sm-12 col-md-3">
                             <div id="ck3" class="contents text-right">
-                                <span class="m-0" id="editor_title_t" >
+                                <h3 class="m-0" id="editor_title_t" >
                                     Invoice
-                                </span>
+                                </h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-12 row mx-auto ">
                         <div id="work-title" class="col-sm-12 mb-3">
                             <div id="ck4" class="contents text-right">
-                                <span class="m-0 font-weight-bolder" id="editor_title_t2" >
+                                <h3 class="m-0 " id="editor_title_t2" >
                                     Invoice
-                                </span>
+                                </h3>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-7 row">
