changes on tax choosing

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         @media print { @page {size: auto !important} }
 
     </style>
-
+    <link rel="stylesheet" href="static/animate.css">
 
 </head>
 <body>
@@ -138,7 +138,7 @@
     <div class="col-sm-12">
         <div class="row py-4">
 
-            <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7 p-3 mx-auto bg-whitee receipt_wrapper">
+            <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7 p-3 mx-auto bg-whitee receipt_wrapper animate__animated  animate__rubberBand">
                 <div id="print_doc" class="row" style="padding: 0 14px;">
                     <div id="right" class="col-sm-12 row mx-auto header_bottom_boder pb-2">
                         <div class="col-sm-12 col-md-5 px-0 py-0  " >
@@ -387,7 +387,7 @@
 
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade animate__animated  animate__zoomInLeft " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header" style="padding: 2px 8px;">
@@ -466,7 +466,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+            <div class="modal fade animate__animated animate__zoomInLeft " id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header" style="padding: 2px 8px;">
@@ -524,7 +524,7 @@
                 </div>
             </div>
             <!-- Modal -->
-            <div class="modal fade" id="usetax" tabindex="-1" role="dialog" aria-labelledby="exampleModaltaxin" aria-hidden="true">
+            <div class="modal fade animate__animated animate__zoomInLeft " id="usetax" tabindex="-1" role="dialog" aria-labelledby="exampleModaltaxin" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header" style="padding: 2px 8px;">
@@ -554,7 +554,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade" id="usediscount" tabindex="-1" role="dialog" aria-labelledby="exampleModaltaxing" aria-hidden="true">
+            <div class="modal fade animate__animated animate__zoomInLeft " id="usediscount" tabindex="-1" role="dialog" aria-labelledby="exampleModaltaxing" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header" style="padding: 2px 8px;">
