--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
 
-    <link rel="stylesheet" href="static/bootstrap.css" >
+    <link rel="stylesheet" href="static/bootstrap.min.css" >
     <link rel="stylesheet" href="static/main.css">
 <!--    <script src="static/fontaw.js" crossorigin="anonymous"></script>-->
     <script src="static/fonta.js" crossorigin="anonymous"></script>
@@ -298,7 +298,7 @@
                                     <th class="no-tax-hide print_hide2" style="display: none; padding:3px 1px !important;vertical-align: initial !important;" scope="row">
                                         <div class="form-group mb-0">
                                             <select onchange="calculateTaxOne(this); calculateTaxTwo(this); " class="form-control p-1 calcit tax-dropdown" >
-
+                                                <option class="op1" selected value="0">Choose</option>
 
                                             </select>
                                             <span class="seltx" data-seltax="" style="display: none;">0</span>
@@ -372,9 +372,9 @@
                          </table>
                     </div>
                     <div class="col-sm-12 row mx-auto py-2">
-                        <span class="text-left w-100 border-bottom">Notes / Terms</span>
+                        <span id="cknotes" class="text-left w-100 border-bottom ">Notes / Terms</span>
                         <div style="min-height: 400px" class="w-100 text-left" id="validationTextarea">
-
+                           <span> Notes</span>
                         </div>
                     </div>
 
@@ -388,7 +388,7 @@
 
             <!-- Modal -->
             <div class="modal fade animate__animated  animate__zoomInLeft " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-dialog modal-lg ">
                     <div class="modal-content">
                         <div class="modal-header" style="padding: 2px 8px;">
                             <h5 class="modal-title" id="exampleModalLabel">Add Tax</h5>
@@ -467,7 +467,7 @@
                 </div>
             </div>
             <div class="modal fade animate__animated animate__zoomInLeft " id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
-                <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-dialog modal-lg ">
                     <div class="modal-content">
                         <div class="modal-header" style="padding: 2px 8px;">
                             <h5 class="modal-title" id="exampleModalLabel2">Add discount</h5>
@@ -595,7 +595,7 @@
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script type="text/javascript" src="static/jquery351.js"></script>
 <script type="text/javascript" src="static/popper.js"></script>
-<script type="text/javascript" src="static/bootstrap.js"></script>
+<script type="text/javascript" src="static/bootstrap.min.js"></script>
 <script type="text/javascript" src="static/html2pdf.js"></script>
 <script type="text/javascript" src="static/resize.js"></script>
 <script type="text/javascript" src="static/db.js" ></script>
