--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade animate__animated animate__zoomInLeft " id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+            <div class="modal fade animate__animated animate__zoomInRight " id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
                 <div class="modal-dialog modal-lg ">
                     <div class="modal-content">
                         <div class="modal-header" style="padding: 2px 8px;">
