changes of thead spacing

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                                         <input style="background-color: #f6f6f6; width: 70px;" aria-label="dd" class="form-control no-border input_title_sm font-weight-bolder" type="text" value="Tax" placeholder="Tax">
                                     </th>
 
-                                    <th style=" padding:0 9px !important;vertical-align: initial !important;width:140px;" class="ccd" scope="col">
-                                        <input onkeyup="this.style.width = ((this.value.length + 1) * 8) + 'px';" style="background-color: #f6f6f6" aria-label="v" class="form-control no-border input_title_sm font-weight-bolder" type="text" value="Amount" placeholder="Amount">
+                                    <th style=" padding:0 9px !important;vertical-align: initial !important; min-width:143px;" class="ccd" scope="col">
+                                        <input style="background-color: #f6f6f6" aria-label="v" class="form-control no-border input_title_sm font-weight-bolder" type="text" value="Amount" placeholder="Amount">
                                     </th>
                                     <th style=" padding:0 9px !important;vertical-align: initial !important;" scope="col" class="print_hide">
 
