--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <!--    <script src="static/ck-editor.js" ></script>-->
     <style>
         .table td, .table th .table td {
-            padding:0 4px !important;vertical-align: initial !important;
+            padding:0 4px !important;
+            vertical-align: initial !important;
 
         }
         .table .ck.ck-editor__editable_inline>:last-child {
@@ -40,9 +41,29 @@
             width: 150px;
             margin-left: auto;
         }
-        .table-bordered th, .table-bordered tr, .table-bordered td, .table-bordered thead tr th {
-            border: 1px solid #acacac ;
+
+         /*.table-bordered tbody tr, .table-bordered thead tr {*/
+         /*   border: 1px solid #565656 !important;*/
+         /*}*/
+        .table-bordered tbody tr th,  .table-bordered tbody tr td{
+            border: 1px solid #565656 !important;
+         }
+        .table-bordered thead tr th {
+            border-top:  1px solid #565656 !important;
+            border-left:  1px solid #565656 !important;
+            border-right:  1px solid #565656 !important;
+            /*border-bottom:  2px solid #565656 !important;*/
         }
+        .table-bordered thead tr:nth-child(1){
+            border-top:  3px solid #00000060 !important
+        }
+        .table-bordered tbody tr:nth-child(1){
+            border-top:  3px solid #00000060 !important
+        }
+        /*.table-bordered thead tr{*/
+        /*    border: 1px solid #565656 !important;*/
+        /*}*/
+
         .table-bordered thead tr th,.table-bordered thead tr th input{
             background-color: rgb(224, 222, 222) !important;
         }
@@ -55,7 +76,7 @@
             border-left-color: #ffffff !important;
             border-top-color: #ffffff !important;
         }
-        @media print { @page {size: auto !important} }
+        /*@media print { @page {size: auto !important} }*/
 
     </style>
     <link rel="stylesheet" href="static/animate.css">
@@ -143,16 +164,16 @@
                     <div id="right" class="col-sm-12 row mx-auto header_bottom_boder pb-2">
                         <div class="col-sm-12 col-md-5 px-0 py-0  " >
                             <div id="ck1" class="contents">
-                                <h4>[ Business Name]</h4><br>
-                                [ Business Address ]<br>
+                                <h4>[Business Name]</h4><br>
+                                [Business Address]<br>
 
                                 <span class="d-flex">
-                                    <span>[ City ], </span>
-                                    <span>[ State ]</span>
-                                    <span>[ Postal Code ]</span><br>
+                                    <span>[City], </span>
+                                    <span>[State],</span>
+                                    <span>[Postal Code]</span><br>
                                 </span><br>
-                                [ Business Phone Number ]<br>
-                                [ Business Email Address ]
+                                [Business Phone Number]<br>
+                                [Business Email Address]
 
                             </div>
                         </div>
@@ -182,16 +203,16 @@
                         </div>
                         <div class="col-sm-12 col-md-5 px-0 py-0  " >
                             <div id="ck2" class="contents w-100">
-                                <h4>[ Business Name]</h4><br>
-                                [ Business Address ]<br>
+                                <h4>[Business Name]</h4><br>
+                                [Business Address]<br>
 
                                 <span class="d-flex">
-                                    <span>[ City ]</span>
-                                    <span>[ State ]</span>
-                                    <span>[ Postal Code ]</span><br>
+                                    <span>[City]</span>
+                                    <span>[State]</span>
+                                    <span>[Postal Code]</span><br>
                                 </span><br>
-                                [ Phone Number ]<br>
-                                [ Email Address ]
+                                [Phone Number]<br>
+                                [Email Address]
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-3">
@@ -218,12 +239,12 @@
                             </div>
                             <div class="col-sm-12 col-md-9 p-0">
                                 <div id="ck5" class="contents text-left p-0">
-                                    [ Client Name]<br>
-                                    [ Client Address Line 1 ]<br>
+                                    [Client Name]<br>
+                                    [Client Address Line 1]<br>
                                     <span class="d-flex">
-                                        [ City ]
-                                        [ State ]
-                                        [ Postal Code ]
+                                        [City]
+                                        [State]
+                                        [Postal Code]
 
                                     </span>
                                 </div>
@@ -256,7 +277,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 row mx-auto py-4">
-                         <table style=""  class="table table-bordered main-table resizable" id="table">
+                         <table style="width: 100%"  class="table table-bordered main-table resizable" id="table">
                             <thead >
                                 <tr style="background-color: #f6f6f6">
                                     <th style=" padding:0 9px !important;vertical-align: initial !important;" scope="col">
@@ -373,7 +394,7 @@
                     </div>
                     <div class="col-sm-12 row mx-auto py-2">
                         <span id="cknotes" class="text-left w-100 border-bottom ">Notes / Terms</span>
-                        <div style="min-height: 400px" class="w-100 text-left" id="validationTextarea">
+                        <div style="min-height: 400px; border-top:  1px solid #00000060 !important" class="w-100 text-left" id="validationTextarea">
                            <span> Notes</span>
                         </div>
                     </div>
