--- a/index.html
+++ b/index.html
@@ -49,20 +49,30 @@
             border: 1px solid #565656 !important;
          }
         .table-bordered thead tr th {
-            border-top:  1px solid #565656 !important;
-            border-left:  1px solid #565656 !important;
-            border-right:  1px solid #565656 !important;
+            border-top:  1px solid #3e3e3e !important;
+            border-left:  1px solid  #3e3e3e !important;
+            border-right:  1px solid  #3e3e3e !important;
             /*border-bottom:  2px solid #565656 !important;*/
         }
         .table-bordered thead tr:nth-child(1){
-            border-top:  3px solid #00000060 !important
+            border-top: 3px solid #00000060 !important
         }
         .table-bordered tbody tr:nth-child(1){
-            border-top:  3px solid #00000060 !important
+            border-top: 3px solid #00000060 !important
         }
-        /*.table-bordered thead tr{*/
-        /*    border: 1px solid #565656 !important;*/
+        /*.table-bordered thead tr th:nth-child(1){*/
+        /*    border-left:  3px solid #00000060 !important*/
         /*}*/
+        /*.table-bordered thead tr th:last-child{*/
+        /*    border-right: 3px solid #00000060 !important*/
+        /*}*/
+
+        .table-bordered tbody tr th:nth-child(1){
+            border-left:  2px solid #00000099 !important
+        }
+        .table-bordered tbody tr th:last-child{
+            border-right:  2px solid #00000099 !important
+        }
 
         .table-bordered thead tr th,.table-bordered thead tr th input{
             background-color: rgb(224, 222, 222) !important;
@@ -76,7 +86,6 @@
             border-left-color: #ffffff !important;
             border-top-color: #ffffff !important;
         }
-        /*@media print { @page {size: auto !important} }*/
 
     </style>
     <link rel="stylesheet" href="static/animate.css">
@@ -159,7 +168,7 @@
     <div class="col-sm-12">
         <div class="row py-4">
 
-            <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7 p-3 mx-auto bg-whitee receipt_wrapper animate__animated  animate__rubberBand">
+            <div style="padding: 31px !important;" class="col-sm-12 col-md-12 col-lg-7 col-xl-7 p-3 mx-auto bg-whitee receipt_wrapper animate__animated  animate__rubberBand">
                 <div id="print_doc" class="row" style="padding: 0 14px;">
                     <div id="right" class="col-sm-12 row mx-auto header_bottom_boder pb-2">
                         <div class="col-sm-12 col-md-5 px-0 py-0  " >
